[package]
name = "items_0"
version = "0.0.2"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[lib]
path = "src/items_0.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.4"
serde_json = "1.0"
bincode = "1.3.3"
bytes = "1.2.1"
futures-util = "0.3.24"
chrono = { version = "0.4.19", features = ["serde"] }
netpod = { path = "../netpod" }
err = { path = "../err" }
